# rust-library-build

./: Cargo.toml  README.md
examples/: mylib_example.rs
src/: basic_d.rs  lib.rs
src/basic_a/: mod.rs
src/basic_c/: basic_sub.rs
tests/: lib.rs
